--- a/index.html
+++ b/index.html
@@ -213,11 +213,19 @@
     <!-- Navigation -->
     <nav class="fixed top-0 w-full z-50 glass-panel border-b border-white/5">
         <div class="max-w-7xl mx-auto px-6 h-16 flex items-center justify-between">
-            <div class="font-cinzel font-bold text-xl tracking-widest text-white">
+            <a href="index.html"
+                class="font-cinzel font-bold text-xl tracking-widest text-white hover:opacity-80 transition-opacity">
                 MARACANIA<span class="text-neon-lime">.AI</span>
-            </div>
-            <div class="flex gap-1 overflow-x-auto no-scrollbar" id="league-nav">
-                <!-- Nav Items Injected Here -->
+            </a>
+            <div class="flex items-center gap-4 md:gap-6">
+                <div class="flex gap-1 overflow-x-auto no-scrollbar max-w-[40vw] md:max-w-none" id="league-nav">
+                    <!-- Nav Items Injected Here -->
+                </div>
+                <div class="hidden md:block h-6 w-px bg-white/10"></div>
+                <a href="methodology.html"
+                    class="text-[10px] md:text-xs font-bold tracking-widest uppercase text-white/50 hover:text-neon-lime transition-colors whitespace-nowrap">
+                    Methodology
+                </a>
             </div>
         </div>
     </nav>
@@ -226,7 +234,7 @@
     <main class="relative z-10 pt-24 pb-12 px-4 max-w-7xl mx-auto min-h-screen flex flex-col">
 
         <!-- Hero Section -->
-        <header id="hero-section" class="mb-16 mt-8 animate-[slideUpFade_0.8s_ease-out_forwards]">
+        <header id="hero-section" class="mb-12 mt-8 animate-[slideUpFade_0.8s_ease-out_forwards]">
             <!-- Injected Hero Content -->
             <div class="text-center">
                 <div
@@ -239,6 +247,19 @@
                 </h1>
             </div>
         </header>
+
+        <!-- Match Prediction Center -->
+        <div id="match-center-container" class="mb-16 hidden animate-[slideUpFade_0.9s_ease-out_forwards]">
+            <div class="flex items-center gap-4 mb-4 px-2">
+                <div class="h-px bg-white/10 flex-1"></div>
+                <span class="text-neon-lime text-xs font-bold tracking-[0.2em] uppercase">Next Matchday
+                    Predictions</span>
+                <div class="h-px bg-white/10 flex-1"></div>
+            </div>
+            <div class="flex gap-4 overflow-x-auto pb-4 no-scrollbar" id="match-center-scroll">
+                <!-- Matches Injected Here -->
+            </div>
+        </div>
 
         <!-- Standings Grid -->
         <div class="w-full">
@@ -313,9 +334,22 @@
 
             <!-- Insights Section -->
             <div class="grid grid-cols-2 gap-4 mb-8">
-                <div class="stat-card">
-                    <div class="flex flex-col h-full justify-between">
-                        <div class="text-white/60 text-xs font-bold uppercase tracking-wider mb-2">Run-in Difficulty
+                <div id="modal-run-in-card"
+                    class="stat-card group cursor-pointer hover:bg-white/5 transition-colors relative overflow-hidden"
+                    onclick="toggleRunIn()">
+                    <div
+                        class="absolute inset-0 bg-neon-lime/0 group-hover:bg-neon-lime/5 transition-colors duration-500">
+                    </div>
+                    <div class="flex flex-col h-full justify-between relative z-10">
+                        <div class="flex justify-between items-start">
+                            <div class="text-white/60 text-xs font-bold uppercase tracking-wider mb-2">Run-In Difficulty
+                            </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round"
+                                class="text-white/30 group-hover:text-neon-lime transition-colors transform group-hover:translate-y-0.5">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
                         </div>
                         <div class="flex items-end gap-2">
                             <span id="modal-sos-val" class="text-2xl font-bold text-white">5.0</span>
@@ -359,6 +393,15 @@
                 </div>
             </div>
 
+            <!-- The Run-In Section (New) -->
+            <div id="modal-run-in-container" class="mb-8 hidden">
+                <div class="text-white/60 text-xs font-bold uppercase tracking-wider mb-4 border-b border-white/5 pb-2">
+                    Next 5 Opponents</div>
+                <div id="modal-run-in-list" class="space-y-2">
+                    <!-- Opponents injected here -->
+                </div>
+            </div>
+
             <!-- Position Distribution Chart -->
             <div class="stat-card">
                 <div class="text-white/60 text-xs font-bold uppercase tracking-wider mb-4 border-b border-white/5 pb-2">
@@ -387,7 +430,7 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             if (typeof simulationResults !== 'undefined') {
-                const leagues = Object.keys(simulationResults);
+                const leagues = Object.keys(simulationResults).filter(key => !key.endsWith('_upcoming'));
                 renderNav(leagues);
                 renderFilters();
                 if (leagues.includes('La Liga')) selectLeague('La Liga');
@@ -397,6 +440,7 @@
 
         function renderNav(leagues) {
             const nav = document.getElementById('league-nav');
+
             nav.innerHTML = leagues.map(league => `
                 <button onclick="selectLeague('${league}')" 
                     id="nav-${league.replace(/\s+/g, '-')}"
@@ -469,10 +513,56 @@
 
             // Render content
             const data = simulationResults[leagueName];
+            const matches = simulationResults[leagueName + "_upcoming"];
             if (data) {
                 renderHero(data);
                 renderGrid(data);
+                renderMatchCenter(matches);
             }
+        }
+
+
+
+        function renderMatchCenter(matches) {
+            const container = document.getElementById('match-center-container');
+            const scroll = document.getElementById('match-center-scroll');
+
+            if (!matches || matches.length === 0) {
+                container.classList.add('hidden');
+                return;
+            }
+
+            container.classList.remove('hidden');
+            scroll.innerHTML = matches.map(m => `
+                <div class="glass-panel p-4 rounded-lg min-w-[280px] border border-white/5 flex flex-col justify-between hover:border-white/20 transition-colors cursor-default">
+                    <div class="flex justify-between items-center text-[10px] text-white/40 uppercase font-bold tracking-widest mb-3">
+                        <span>Match Prediction</span>
+                    </div>
+                    
+                    <div class="flex justify-between items-center mb-4">
+                        <div class="text-center w-1/3">
+                            <div class="text-sm font-bold text-white leading-tight mb-1">${m.home_team}</div>
+                            <div class="text-xs text-neon-lime">${m.home_win_prob}%</div>
+                        </div>
+                        <div class="text-xs font-mono text-white/30">VS</div>
+                        <div class="text-center w-1/3">
+                            <div class="text-sm font-bold text-white leading-tight mb-1">${m.away_team}</div>
+                            <div class="text-xs text-red-500">${m.away_win_prob}%</div>
+                        </div>
+                    </div>
+
+                    <div class="w-full h-1.5 bg-white/5 rounded-full overflow-hidden flex">
+                        <div class="h-full bg-neon-lime" style="width: ${m.home_win_prob}%"></div>
+                        <div class="h-full bg-white/20" style="width: ${m.draw_prob}%"></div>
+                        <div class="h-full bg-red-600" style="width: ${m.away_win_prob}%"></div>
+                    </div>
+                    <div class="flex justify-between mt-1 text-[9px] text-white/30 font-mono">
+                        <span>1</span>
+                        <span>X</span>
+                        <span>2</span>
+                    </div>
+                </div>
+            `).join('');
         }
 
         function renderHero(data) {
@@ -702,6 +792,52 @@
                 }
             }
 
+            // Populate Run-In (New)
+            const runInContainer = document.getElementById('modal-run-in-container');
+            const runInList = document.getElementById('modal-run-in-list');
+
+            // Quick Reset of Container Visibility to HIDDEN every time modal opens
+            runInContainer.classList.add('hidden');
+
+            if (team.next_opponents && team.next_opponents.length > 0) {
+                // Determine if we should enable the click on the card
+                const card = document.getElementById('modal-run-in-card');
+                if (card) {
+                    card.style.pointerEvents = 'auto'; // Enable click
+                    card.style.opacity = '1';
+                }
+
+                runInList.innerHTML = team.next_opponents.map(opp => {
+                    // Difficulty Color
+                    let diffColor = 'bg-white/20';
+                    let diffText = 'text-white/40';
+                    if (opp.difficulty > 7) { diffColor = 'bg-red-500'; diffText = 'text-red-500'; }
+                    else if (opp.difficulty > 5.5) { diffColor = 'bg-orange-500'; diffText = 'text-orange-500'; }
+                    else if (opp.difficulty < 3.5) { diffColor = 'bg-green-500'; diffText = 'text-green-500'; }
+                    else if (opp.difficulty < 4.5) { diffColor = 'bg-neon-lime'; diffText = 'text-neon-lime'; }
+
+                    return `
+                        <div class="flex items-center gap-3 p-2 bg-white/5 rounded border border-white/5">
+                            <div class="w-1 h-8 rounded-full ${diffColor}"></div>
+                            <div class="flex-1">
+                                <div class="text-sm font-bold text-white">${opp.opponent}</div>
+                                <div class="text-[10px] uppercase tracking-wider text-white/30">${opp.is_home ? 'Home' : 'Away'}</div>
+                            </div>
+                            <div class="text-right">
+                                <div class="text-xs font-mono font-bold ${diffText}">${opp.difficulty}</div>
+                                <div class="text-[9px] uppercase tracking-wider text-white/20">Diff</div>
+                            </div>
+                        </div>
+                    `;
+                }).join('');
+            } else {
+                runInContainer.classList.add('hidden');
+                const card = document.getElementById('modal-run-in-card');
+                if (card) {
+                    card.style.pointerEvents = 'none'; // Disable click
+                }
+            }
+
             // Populate Chart
             const chartContainer = document.getElementById('modal-chart');
             const numTeams = leagueData.length;
@@ -738,6 +874,13 @@
         function closeModal(event) {
             if (event && event.target !== event.currentTarget) return; // Only if clicking overlay
             document.getElementById('team-modal').classList.remove('active');
+            // Reset run-in view for next time
+            document.getElementById('modal-run-in-container').classList.add('hidden');
+        }
+
+        function toggleRunIn() {
+            const container = document.getElementById('modal-run-in-container');
+            container.classList.toggle('hidden');
         }
 
     </script>
